Added local vscode config to gitignore file.

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 NLP Python Jupyter Notebooks/.cache/
 NLP Python Jupyter Notebooks/.ipython/
 NLP Python Jupyter Notebooks/.local/
+NLP Python Jupyter Notebooks/.vscode/
 NLP Python Jupyter Notebooks/.jupyter/
 NLP Python Jupyter Notebooks/nltk_data/
 .ipynb_checkpoints
