Implemented 'Identify section span' in new API resource 'identify-section-span-in-chapter-text'. #17

--- a/NLP-Flask-Api/Dockerfile
+++ b/NLP-Flask-Api/Dockerfile
@@ -5,6 +5,9 @@ WORKDIR /usr/src/app
 COPY requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
 
+RUN python -m nltk.downloader punkt
+# RUN python -m nltk.downloader wordnet
+
 COPY . .
 EXPOSE 5000
 CMD ["/usr/local/bin/flask", "run", "--host=0.0.0.0"]
