--- a/ServiceController/ServiceController/ServiceController.ConsoleApp/ServiceController.ConsoleApp.csproj
+++ b/ServiceController/ServiceController/ServiceController.ConsoleApp/ServiceController.ConsoleApp.csproj
@@ -2,7 +2,15 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ServiceController.TextService\ServiceController.TextService.csproj" />
+  </ItemGroup>
 
 </Project>
