--- a/ServiceController/ServiceController/ServiceController.ConsoleApp/ServiceController.ConsoleApp.csproj
+++ b/ServiceController/ServiceController/ServiceController.ConsoleApp/ServiceController.ConsoleApp.csproj
@@ -10,6 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ServiceController.Entities\ServiceController.Entities.csproj" />
     <ProjectReference Include="..\ServiceController.NlpService\ServiceController.NlpService.csproj" />
     <ProjectReference Include="..\ServiceController.TextService\ServiceController.TextService.csproj" />
   </ItemGroup>
