--- a/ServiceController/ServiceController/ServiceController.ConsoleApp/ServiceController.ConsoleApp.csproj
+++ b/ServiceController/ServiceController/ServiceController.ConsoleApp/ServiceController.ConsoleApp.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ServiceController.Entities\ServiceController.Entities.csproj" />
+    <ProjectReference Include="..\ServiceController.KnowledgeService\ServiceController.KnowledgeService.csproj" />
     <ProjectReference Include="..\ServiceController.NlpService\ServiceController.NlpService.csproj" />
     <ProjectReference Include="..\ServiceController.TextService\ServiceController.TextService.csproj" />
   </ItemGroup>
