Adding secrets to a safe place -> not source control ;-) #35

--- a/ServiceController/ServiceController/ServiceController.ConsoleApp/ServiceController.ConsoleApp.csproj
+++ b/ServiceController/ServiceController/ServiceController.ConsoleApp/ServiceController.ConsoleApp.csproj
@@ -3,9 +3,11 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <UserSecretsId>af0a1b8f-69b4-4510-bcd9-7ec036b91dd1</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
   </ItemGroup>
 
