--- a/ServiceController/ServiceController/ServiceController.ServiceApp/ServiceController.ServiceApp.csproj
+++ b/ServiceController/ServiceController/ServiceController.ServiceApp/ServiceController.ServiceApp.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ServiceController.AuthenticationService\ServiceController.AuthenticationService.csproj" />
     <ProjectReference Include="..\ServiceController.Entities\ServiceController.Entities.csproj" />
     <ProjectReference Include="..\ServiceController.KnowledgeService\ServiceController.KnowledgeService.csproj" />
     <ProjectReference Include="..\ServiceController.NlpService\ServiceController.NlpService.csproj" />
