Created the internal app component that will communicate with the Transformer Service. #39

--- a/ServiceController/ServiceController/ServiceController.ConsoleApp/ServiceController.ConsoleApp.csproj
+++ b/ServiceController/ServiceController/ServiceController.ConsoleApp/ServiceController.ConsoleApp.csproj
@@ -17,6 +17,7 @@
     <ProjectReference Include="..\ServiceController.KnowledgeService\ServiceController.KnowledgeService.csproj" />
     <ProjectReference Include="..\ServiceController.NlpService\ServiceController.NlpService.csproj" />
     <ProjectReference Include="..\ServiceController.TextService\ServiceController.TextService.csproj" />
+    <ProjectReference Include="..\ServiceController.TransformerService\ServiceController.TransformerService.csproj" />
   </ItemGroup>
 
 </Project>
