Settings that are not secret are now set in settings file. #42

--- a/ServiceController/ServiceController/ServiceController.ControllerApi/appsettings.json
+++ b/ServiceController/ServiceController/ServiceController.ControllerApi/appsettings.json
@@ -6,5 +6,25 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AuthenticationServiceSettings": {
+    "ApiBaseUrl": "https://sdir-d-apim-common.azure-api.net/core-identityserver"
+  },
+  "TextServiceSettings": {
+    "ApiBaseUrl": "https://sdir-d-apim-common.azure-api.net/core-text-internal"
+  },
+  "NlpServiceSettings": {
+    "ApiBaseUrl": "http://localhost:5000",
+    "RunAsTest": "true"
+  },
+  "TransformerServiceSettings": {
+    "ApiBaseUrl": "http://localhost:4321",
+    "RunAsTest": "true"
+  },
+  "KnowledgeServiceSettings": {
+    "ApiBaseUrl": "https://sdir-d-apim-common.azure-api.net/core-topbraid-edg",
+    "TopBraidEdgOntologyId": "nlppoctestontology",
+    "TopBraidEdgWorkflowId": "nlpknowledgefromappworkflow",
+    "TopBraidEdgUserId": "ontologist"
+  }
 }
