Api can now load secrets. #42

--- a/ServiceController/ServiceController/ServiceController.ControllerApi/ServiceController.ControllerApi.csproj
+++ b/ServiceController/ServiceController/ServiceController.ControllerApi/ServiceController.ControllerApi.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <UserSecretsId>e5a7057d-5d58-40ce-8761-5654be755d48</UserSecretsId>
   </PropertyGroup>
 
 
