--- a/ServiceController/ServiceController/ServiceController.ControllerApi/ServiceController.ControllerApi.csproj
+++ b/ServiceController/ServiceController/ServiceController.ControllerApi/ServiceController.ControllerApi.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ServiceController.Entities\ServiceController.Entities.csproj" />
+    <ProjectReference Include="..\ServiceController.NlpService\ServiceController.NlpService.csproj" />
     <ProjectReference Include="..\ServiceController.TextService\ServiceController.TextService.csproj" />
   </ItemGroup>
 
