--- a/rdf-transformer/pom.xml
+++ b/rdf-transformer/pom.xml
@@ -60,7 +60,11 @@
             <version>2.8.6</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-text</artifactId>
+            <version>1.9</version>
+        </dependency>
 
         <dependency>
             <groupId>xyz.ottr.lutra</groupId>
