secrets.json now override appsettings.json with the super secret stuff. All default settings is to be found in the appsettings.json file. #44

--- a/ServiceController/ServiceController/ServiceController.ControllerApi/appsettings.json
+++ b/ServiceController/ServiceController/ServiceController.ControllerApi/appsettings.json
@@ -8,7 +8,10 @@
   },
   "AllowedHosts": "*",
   "AuthenticationServiceSettings": {
-    "ApiBaseUrl": "https://sdir-d-apim-common.azure-api.net/core-identityserver"
+    "ApiBaseUrl": "https://sdir-d-apim-common.azure-api.net/core-identityserver",
+    "ClientId": "nlpservicecontrollerapp",
+    "ClientSecret": "This appsettings.json file is committed to source control. Please put the real secret in the secrets.json file which will override this field.",
+    "Scope": "apsGateway"
   },
   "TextServiceSettings": {
     "ApiBaseUrl": "https://sdir-d-apim-common.azure-api.net/core-text-internal"
