--- a/ServiceController/ServiceController/ServiceController.ControllerApi/appsettings.json
+++ b/ServiceController/ServiceController/ServiceController.ControllerApi/appsettings.json
@@ -29,5 +29,13 @@
     "TopBraidEdgOntologyId": "nlppoctestontology",
     "TopBraidEdgWorkflowId": "nlpknowledgefromappworkflow",
     "TopBraidEdgUserId": "ontologist"
+  },
+  "IdentityProviderSettings": {
+    "IdentityServerSetting": {
+      "Authority": "https://sdir-d-apim-common.azure-api.net/core-identityserver/",
+      "Issuer": "https://sdir-d-apim-common.azure-api.net/core-identityserver",
+      "Scope": "apsGateway"
+    },
+    "PolicyDocymentUrl": "https://sdir-d-apim-common.azure-api.net/core-authorization-internal/v1/policies"
   }
 }
