fix(nlp-api): get base url from environment variable if specified
Because it can't always be reached on localhost:5000

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,6 +20,7 @@ services:
     environment:
       FLASK_APP: app.py
       FLASK_ENV: development
+      APP_BASE_URL: http://nlp-api:5000
 
   rdf-transformer:
     build: rdf-transformer
