Updated microservice api settings.

--- a/ServiceController/ServiceController/ServiceController.ControllerApi/appsettings.json
+++ b/ServiceController/ServiceController/ServiceController.ControllerApi/appsettings.json
@@ -18,11 +18,11 @@
   },
   "NlpServiceSettings": {
     "ApiBaseUrl": "http://localhost:5000",
-    "RunAsTest": "true"
+    "RunAsTest": "false"
   },
   "TransformerServiceSettings": {
     "ApiBaseUrl": "http://localhost:4321",
-    "RunAsTest": "true"
+    "RunAsTest": "false"
   },
   "KnowledgeServiceSettings": {
     "ApiBaseUrl": "https://sdir-d-apim-common.azure-api.net/core-topbraid-edg",
